meta: remove module: Node16

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "./packages/core/test/tsconfig.json",
   "compilerOptions": {
-    "rootDir": "..",
-    "module": "Node16"
+    "rootDir": ".",
   },
   "include": ["./dev/**/*.ts", "./sscce.ts"]
 }
