--- a/packages/validator-js/tsconfig.json
+++ b/packages/validator-js/tsconfig.json
@@ -18,5 +18,5 @@
     "stripInternal": true,
     "exactOptionalPropertyTypes": true
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts"]
 }
