--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  install-and-build-core:
+  install-and-build:
     strategy:
       fail-fast: false
       matrix:
@@ -34,9 +34,9 @@ jobs:
       - name: Install dependencies and build sequelize
         run: yarn install --frozen-lockfile
       - name: Build sequelize
-        run: yarn workspace @sequelize/core build
+        run: yarn build
       - name: Compress artifact
-        run: tar -cf install-build-node-${{ matrix.node-version }}.tar ./packages/core/lib ./packages/core/node_modules ./packages/core/types ./node_modules
+        run: tar -cf install-build-node-${{ matrix.node-version }}.tar ./packages/core/lib ./packages/core/node_modules ./packages/core/types ./packages/validator-js/lib ./packages/validator-js/node_modules ./packages/validator-js/types ./node_modules
       - uses: actions/upload-artifact@v3
         with:
           name: install-build-artifact-node-${{ matrix.node-version }}
@@ -45,7 +45,7 @@ jobs:
   lint:
     name: Lint code
     runs-on: ubuntu-latest
-    needs: install-and-build-core
+    needs: install-and-build
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
