--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mocha": "10.2.0",
     "node-hook": "1.0.0",
     "source-map-support": "0.5.21",
+    "ts-node": "10.9.1",
     "typedoc": "0.23.23",
     "typescript": "4.9.4"
   },
