--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -165,7 +165,7 @@
     "----------------------------------------- static analysis -----------------------------------------": "",
     "test-typings": "tsc --noEmit && tsc -b test/tsconfig.json",
     "----------------------------------------- tests ---------------------------------------------------": "",
-    "mocha": "mocha -r ../../register-esbuild.js",
+    "mocha": "mocha -r ../../test/register-esbuild.js",
     "_test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
     "test-integration": "yarn mocha \"test/integration/**/*.test.[tj]s\"",
     "test-smoke": "yarn mocha \"test/smoke/**/*.test.[tj]s\" --timeout 600000",
