feat: improve typedoc & remove `Optional`, `Error` exports (#15495)
BREAKING CHANGE: The `Optional` type has been removed. Use a type library like `type-fest`'s `SetOptional` if you need this type
BREAKING CHANGE: Removed `Sequelize.Error` and the `Error` export. Use the `BaseError` export instead.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -212,8 +212,8 @@
   },
   "support": true,
   "typedoc": {
-    "entryPoint": "./types/index.d.ts",
+    "entryPoint": "./src/index.d.ts",
     "displayName": "@sequelize/core",
-    "tsconfig": "./tsconfig-typedoc.json"
+    "tsconfig": "./tsconfig.json"
   }
 }
