--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,7 +15,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "checkJs": false,
-    "stripInternal": true,
+    "stripInternal": false,
     "exactOptionalPropertyTypes": true
   },
   "include": ["./src/**/*.ts"]
