--- a/packages/core/test/config/.docker.env
+++ b/packages/core/test/config/.docker.env
@@ -12,3 +12,4 @@ SEQ_MSSQL_PORT=8970
 SEQ_MSSQL_DB=sequelize_test
 SEQ_MSSQL_USER=sa
 SEQ_MSSQL_PW=yourStrong(!)Password
+SEQ_COCKROACH_DB=cockroachdbsingle
