--- a/packages/core/test/config/.docker.env
+++ b/packages/core/test/config/.docker.env
@@ -13,3 +13,5 @@ SEQ_MSSQL_DB=sequelize_test
 SEQ_MSSQL_USER=sa
 SEQ_MSSQL_PW=yourStrong(!)Password
 SEQ_COCKROACH_DB=cockroachdbsingle
+SEQ_COCKROACH_USER=root
+SEQ_COCKROACH_PORT=26257
