feat: generate docs from src

--- a/packages/validator-js/package.json
+++ b/packages/validator-js/package.json
@@ -46,5 +46,8 @@
     "chai": "4.3.7",
     "chai-as-promised": "7.1.1",
     "mocha": "10.2.0"
+  },
+  "typedoc": {
+    "entryPoint": "./src/index.ts"
   }
 }
