--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@types/debug": "^4.1.7",
     "@types/validator": "^13.7.5",
+    "cockroachdb": "^1.0.3",
     "dayjs": "^1.11.5",
     "debug": "^4.3.4",
     "dottie": "^2.0.2",
@@ -159,7 +160,8 @@
     "nodejs",
     "object relational mapper",
     "database",
-    "db"
+    "db",
+    "cockroachdb"
   ],
   "publishConfig": {
     "access": "public",
