--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "start-mssql-oldest": "bash dev/mssql/oldest/start.sh",
     "start-mssql-latest": "bash dev/mssql/latest/start.sh",
     "start-db2-oldest": "bash dev/db2/oldest/start.sh",
+    "start-db2-latest": "bash dev/db2/latest/start.sh",
     "start-oldest": "concurrently \"npm:start-*(!db2)-oldest\" && npm run start-db2-oldest",
-    "start-latest": "concurrently \"npm:start-*(!db2)-latest\"",
+    "start-latest": "concurrently \"npm:start-*(!db2)-latest\" && npm run start-db2-latest",
     "stop-mariadb": "bash dev/mariadb/oldest/stop.sh; bash dev/mariadb/latest/stop.sh",
     "stop-mysql": "bash dev/mysql/oldest/stop.sh; bash dev/mysql/latest/stop.sh",
     "stop-postgres": "bash dev/postgres/oldest/stop.sh; bash dev/postgres/latest/stop.sh",
     "stop-mssql": "bash dev/mssql/oldest/stop.sh; bash dev/mssql/latest/stop.sh",
-    "stop-db2": "bash dev/db2/oldest/stop.sh",
+    "stop-db2": "bash dev/db2/oldest/stop.sh; bash dev/db2/latest/stop.sh",
     "stop-all": "concurrently \"npm:stop-*(!all|db2)\" && npm run stop-db2",
     "----------------------------------------- SSCCEs ------------------------------------------": "",
     "sscce": "ts-node sscce.ts",
