--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [ 14, 18 ]
+        node-version: [14, 18]
     name: Upload install and build artifact (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     steps:
@@ -97,6 +97,8 @@ jobs:
         run: yarn workspace @sequelize/core test-unit-ibmi
       - name: Unit tests (snowflake)
         run: yarn workspace @sequelize/core test-unit-snowflake
+      - name: Unit tests (cockroachdb)
+        run: yarn workspace @sequelize/core test-unit-cockroachdb
   docs:
     name: Generate TypeDoc
     runs-on: ubuntu-latest
@@ -143,7 +145,7 @@ jobs:
         node-version: [14, 18]
     name: DB2 (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: [ unit-test, test-typings ]
+    needs: [unit-test, test-typings]
     env:
       DIALECT: db2
       SEQ_DB: testdb
@@ -173,7 +175,7 @@ jobs:
         node-version: [14, 18]
     name: SQLite (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: [ unit-test, test-typings ]
+    needs: [unit-test, test-typings]
     env:
       DIALECT: sqlite
     steps:
@@ -199,7 +201,7 @@ jobs:
         native: [true, false]
     name: Postgres ${{ matrix.postgres-version }}${{ matrix.native && ' (native)' || '' }} (Node ${{ matrix.node-version }})${{ matrix.minify-aliases && ' (minified aliases)' || '' }}
     runs-on: ubuntu-latest
-    needs: [ unit-test, test-typings ]
+    needs: [unit-test, test-typings]
     env:
       DIALECT: ${{ matrix.native && 'postgres-native' || 'postgres' }}
       SEQ_PG_MINIFY_ALIASES: ${{ matrix.minify-aliases && '1' || '' }}
@@ -228,7 +230,7 @@ jobs:
         dialect: [mysql, mariadb]
     name: ${{ matrix.dialect }} ${{ matrix.database-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: [ unit-test, test-typings ]
+    needs: [unit-test, test-typings]
     env:
       DIALECT: ${{ matrix.dialect }}
     steps:
@@ -253,7 +255,7 @@ jobs:
         mssql-version: [2017, 2022]
     name: MSSQL ${{ matrix.mssql-version }} (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: [ unit-test, test-typings ]
+    needs: [unit-test, test-typings]
     services:
       mssql:
         image: mcr.microsoft.com/mssql/server:${{ matrix.mssql-version }}-latest
@@ -287,6 +289,32 @@ jobs:
         run: tar -xf install-build-node-${{ matrix.node-version }}.tar
       - name: Integration Tests
         run: yarn workspace @sequelize/core test-integration
+  test-cockroachdb:
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [18]
+        cockroachdb-version: [oldest]
+        native: [true, false]
+    name: Cockroachdb ${{ matrix.cockroachdb-version }} (Node ${{ matrix.node-version }})
+    runs-on: ubuntu-latest
+    needs: [unit-test, test-typings]
+    env:
+      DIALECT: cockroachdb
+    steps:
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3.6.0
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
+      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+        with:
+          name: install-build-artifact-node-${{ matrix.node-version }}
+      - name: Extract artifact
+        run: tar -xf install-build-node-${{ matrix.node-version }}.tar
+      - name: Install pg-native
+        run: yarn workspace @sequelize/core add pg-native --ignore-engines
+      - run: yarn start-cockroachdb-${{ matrix.cockroachdb-version }}
   release:
     name: Release
     runs-on: ubuntu-latest
@@ -297,6 +325,7 @@ jobs:
         test-postgres,
         test-mysql-mariadb,
         test-mssql,
+        test-cockroachdb,
       ]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/v6' || github.ref == 'refs/heads/v7')
     env:
