--- a/.github/workflows/ibmi-smoke-tests.yml
+++ b/.github/workflows/ibmi-smoke-tests.yml
@@ -4,19 +4,12 @@ on:
   #   - cron: '0 9 */5 * *'
   push
 
-# This configuration cancels previous runs if a new run is started on the same PR. Only one run at a time per PR.
-# This does not affect pushes to the v7 branch itself, only PRs.
-# from https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#example-using-a-fallback-value
-concurrency:
-  group: ${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-
 jobs:
   install-and-build:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [ 14, 18 ]
+        node-version: [14]
     name: Upload install and build artifact (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [14, 18]
+        node-version: [14]
     name: ibmi (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
     needs: [ install-and-build ]
