--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -168,7 +168,7 @@
     "----------------------------------------- tests ---------------------------------------------------": "",
     "mocha": "mocha -r ../../test/register-esbuild.js",
     "_test-unit": "yarn mocha \"test/unit/**/*.test.[tj]s\"",
-    "test-integration": "yarn mocha \"test/integration/**/*.test.[tj]s\"",
+    "test-integration": "yarn mocha \"test/integration/associations/**/*.test.[tj]s\"",
     "test-smoke": "yarn mocha \"test/smoke/**/*.test.[tj]s\" --timeout 600000",
     "teaser": "ts-node test/teaser.ts",
     "test": "yarn build && yarn test-typings && yarn teaser && yarn _test-unit && yarn test-integration",
