--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,6 +56,7 @@
     "inflection": "^2.0.0",
     "lodash": "^4.17.21",
     "pg-connection-string": "^2.5.0",
+    "pg-hstore": "^2.3.4",
     "retry-as-promised": "^7.0.3",
     "semver": "^7.3.7",
     "sequelize-pool": "^8.0.0",
@@ -102,7 +103,6 @@
     "p-settle": "4.1.1",
     "p-timeout": "4.1.0",
     "pg": "8.10.0",
-    "pg-hstore": "2.3.4",
     "rimraf": "4.4.1",
     "sinon": "15.0.3",
     "sinon-chai": "3.7.0",
@@ -112,9 +112,6 @@
   },
   "peerDependenciesMeta": {
     "pg": {
-      "optional": true
-    },
-    "pg-hstore": {
       "optional": true
     },
     "mysql2": {
