--- a/packages/core/test/config/.docker.env
+++ b/packages/core/test/config/.docker.env
@@ -15,3 +15,4 @@ SEQ_MSSQL_PW=yourStrong(!)Password
 SEQ_COCKROACHDB_DB=cockroachdbsingle
 SEQ_COCKROACHDB_USER=root
 SEQ_COCKROACHDB_PORT=26257
+SEQ_COCKROACHDB_PASSWORD=cockroachdb
